Added bots notifications